2006-12-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Don't call link/unlink functions if atee/vtee do not exist. This removes
	some warnings.
	* pitivi/discoverer.py:
	Change behaviour of discoverer to handle cases where demuxers do not
	create all pads at once, but rely on emitting 'no-more-pads' to say
	there are no more coming.
	Fixes #353859

2006-12-20  Ernst Persson  <ernstp@gmail.com>

	reviewed by: Edward Hervey <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Properly scroll by half a second when using the scrollwheel of a
	mouse.
	Fixes #383826

2006-12-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	* pitivi/elements/singledecodebin.py:
	* pitivi/elements/smartscale.py:
	* pitivi/objectfactory.py:
	* pitivi/timeline.py:
	Activate pads before adding them to an element.

2006-12-20  Edward Hervey  <edward@fluendo.com>

	* po/POTFILES.in:
	pitivi/ui/discoverererrordialog.glade is now
	pitivi/ui/filelisterrordialog.glade.
	* po/ar.po:
	* po/ca.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/sv.po:
	* po/zh_CN.po:
	Updated po files for code modifications.

2006-12-20  Edward Hervey  <edward@fluendo.com>

	* docs/HACKING:
	Added note about order in which modules should be imported.
	* pitivi/Makefile.am:
	* pitivi/signalgroup.py:
	Added signalgroup.py.
	Patch from Richard Boulton <richard@tartarus.org>
	* pitivi/bin.py:
	Make length, has_video, has_audio, width and height construction
	properties of SmartBin. Modify subclasses accordingly.
	* pitivi/elements/singledecodebin.py:
	Remove unused code
	* pitivi/elements/smartscale.py:
	Rename unused method arguments
	* pitivi/objectfactory.py:
	Code fix.
	* pitivi/sourcelist.py:
	Added 'not-media-file' signal to SourceList.
	* pitivi/timeline.py:
	Small fix.
	* pitivi/ui/Makefile.am:
	* pitivi/ui/discoverererrordialog.glade:
	* pitivi/ui/filelisterrordialog.glade:
	* pitivi/ui/filelisterrordialog.py: