@@ -1,5 +1,11 @@
 2006-12-20  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/ui/sourcefactories.py:
+	Add explanatory message in the source list when there's no sources.
+	This helps people understand what they can do when they start PiTiVi.
+
+2006-12-20  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/bin.py:
 	Don't call link/unlink functions if atee/vtee do not exist. This removes
 	some warnings.
